handling tree sprite